--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Site sem motivo</h1>
         </header>
         <article>
             <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <p>Motivo se perdeu junto com a criatividade</p>
         </article>
         <article>
             <h2>Artigo 002</h2>
-            <p>Texto do artigo 002</p>
+            <p>Criatividade se perdeu junto com a vontade de estudar</p>
         </article>
     </main>
 </body>
